fix: item tips will not be covered now

--- a/src/styles/item-tip.styl
+++ b/src/styles/item-tip.styl
@@ -1,11 +1,11 @@
 .item-tip-pover
+  position absolute
   background rgba(30, 66, 163, 0.8)
   border-radius 4px
   padding 6px
   color white
   text-shadow black 1px 1px
   font-size 14px
-  z-index 99
   .name
     font-size 20px
   .equip
